--- a/nw.qrc
+++ b/nw.qrc
@@ -3,6 +3,18 @@
 
      <file>images/journey_by_t1na.jpg</file>
 
+     <file>images/go-home.png</file>
+     <file>images/go-up.png</file>
+     <file>images/system-log-out.png</file>
+     <file>images/view-refresh.png</file>
+     <file>images/window-new.png</file>
+     <file>images/help-browser.png</file>
+     <file>images/folder.png</file>
+     <file>images/face-glasses.png</file>
+     <file>images/view_all.png</file>
+
+     <file>images/image-broken.png</file>
+
      <file>nw_help.html</file>
 
 </qresource>
