new-tree-item-allows-more-useful-sorting-and-name-display

--- a/nw.qrc
+++ b/nw.qrc
@@ -12,6 +12,7 @@
      <file>images/folder.png</file>
      <file>images/face-glasses.png</file>
      <file>images/view_all.png</file>
+     <file>images/video-x-generic.png</file>
 
      <file>images/image-broken.png</file>
 
