-- added LAST PLAYED icon for multiple files in one dir -- fixed current item logic for entering new dir (with last played item), reload and go up

--- a/nw.qrc
+++ b/nw.qrc
@@ -13,6 +13,7 @@
      <file>images/face-glasses.png</file>
      <file>images/view_all.png</file>
      <file>images/video-x-generic.png</file>
+     <file>images/last-played.png</file>
 
      <file>images/image-broken.png</file>
 
